# devpocket-warp-api

./: .coveragerc  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .repomixignore  AUTH_SYSTEM_README.md  CLAUDE.md  COMPREHENSIVE_TEST_REPORT.md  DATABASE_SCRIPT_TEST_REPORT.md  Dockerfile  FINAL_TEST_VALIDATION_REPORT.md  PHASE1_IMPLEMENTATION_SUMMARY.md  PHASE_3_COMPLETION_REPORT.md  PHASE_3_FINAL_COMPLETION_REPORT.md  PRE_COMMIT_SETUP_SUMMARY.md  README.md  TESTING_QUICK_START.md  TEST_DEBUGGING_REPORT.md  TEST_FLOW_RESULTS.md  alembic.ini  coverage.json  create_database_from_models.py  docker-compose.prod.yaml  docker-compose.test.yaml  docker-compose.yaml  main.py  mypy.ini  pyproject.toml  pytest.ini  pytest_coverage_runner.py  repomix-output.xml  requirements-dev.txt  requirements.txt  run_comprehensive_coverage.py  setup.py  temp_clean_script.py  test_ai_service_standalone.py  test_auth.py  test_sessions_standalone.py  (+1 more)
.claude/: settings.json
.claude/agents/: api-docs-specialist.md  backend-system-architect.md  devops-incident-responder.md  project-orchestrator.md
.claude/commands/: cook.md  test-flow.md
.github/workflows/: deploy.yml  test.yml
.serena/: project.yml
.serena/memories/: code_style_conventions.md  phase_3_completion_context.md  project_overview.md  suggested_commands.md  task_completion_checklist.md
app/: __init__.py
app/api/ai/: __init__.py  router.py  schemas.py  service.py
app/api/commands/: __init__.py  router.py  schemas.py  service.py
app/api/profile/: __init__.py  router.py  schemas.py  service.py
app/api/sessions/: __init__.py  router.py  schemas.py  service.py
app/api/ssh/: __init__.py  router.py  schemas.py  service.py
app/api/sync/: __init__.py  router.py  schemas.py  service.py
app/auth/: __init__.py  dependencies.py  router.py  schemas.py  security.py
app/core/: config.py  logging.py  security.py
app/db/: database.py
app/middleware/: __init__.py  auth.py  cors.py  rate_limit.py  security.py
app/models/: __init__.py  base.py  command.py  session.py  ssh_profile.py  sync.py  user.py
app/repositories/: __init__.py  base.py  command.py  session.py  ssh_profile.py  sync.py  user.py
app/services/: openrouter.py  ssh_client.py  terminal_service.py
app/websocket/: __init__.py  manager.py  protocols.py  pty_handler.py  router.py  ssh_handler.py  terminal.py
backups/: db_backup_20250815_173141.sql
docker/: redis-test.conf
docs/: api-documentation-status.md  authentication-guide.md  business-model-documentation.md  cicd-infrastructure-improvements.md  database-management.md  developer-integration-guide.md  devpocket-api-endpoints.md  devpocket-server-implementation-py.md  error-handling-guide.md  openapi.yaml  pre-commit-setup.md  sdk-generation-guide.md  swagger-config.json  swagger-custom.css  swagger-custom.js  sync-architecture.md  telegram-notification-setup.md  websocket-protocol.md
migrations/: env.py
migrations/versions/: 001_initial_schema.py  2d47c72d6697_add_user_security_and_activity_fields.py  2f441b98e37b_initial_migration.py  546754fe9bea_add_display_name_to_users_table.py  b8d66d500201_initial_database_schema.py
plans/: 60_PERCENT_COVERAGE_PLAN.md  COMPREHENSIVE_TESTING_PLAN.md  COVERAGE_PROGRESS_REPORT.md  ENUM_MIGRATION_FIX_SUMMARY.md  PHASE_2_60_PERCENT_COVERAGE.md  PHASE_3_API_SERVICES_COVERAGE.md  PHASE_4_COVERAGE_EXPANSION.md  TESTING.md
scripts/: README.md  db_migrate.sh  db_reset.sh  db_seed.sh  db_utils.py  dev.py  format_code.sh  init_db.sql  init_test_db.py  init_test_db.sql  run_tests.sh  run_tests_local.sh  setup_pre_commit.sh  setup_test_env.sh
tests/: conftest.py  test_app_coverage.py  test_basic_coverage.py  test_commands_service_comprehensive.py  test_services_sessions_focused.py  test_sessions_service_direct.py  test_sessions_service_isolated.py  test_ssh_service_isolated.py
tests/factories/: __init__.py  command_factory.py  session_factory.py  ssh_factory.py  sync_factory.py  user_factory.py
tests/integration/: test_basic_integration.py
tests/test_ai/: __init__.py  test_openrouter_integration.py  test_openrouter_service.py
tests/test_api/: __init__.py  test_commands_service.py  test_commands_service_comprehensive.py  test_commands_service_enhanced.py  test_commands_service_phase3_comprehensive.py  test_commands_service_phase4_comprehensive.py  test_sessions_service_phase3_comprehensive.py  test_sessions_service_phase4_comprehensive.py  test_ssh_endpoints.py  test_ssh_service_comprehensive.py
tests/test_auth/: __init__.py  test_dependencies.py  test_endpoints.py  test_security.py
tests/test_database/: __init__.py  test_command_model.py  test_command_repository.py  test_models.py  test_repositories.py  test_ssh_profile_model.py  test_user_repository.py
tests/test_error_handling/: __init__.py  test_edge_cases.py
tests/test_performance/: __init__.py  test_benchmarks.py
tests/test_repositories/: test_base_repository.py  test_command_repository_comprehensive.py  test_command_repository_enhanced.py  test_command_repository_focused.py  test_command_repository_specific.py  test_command_repository_working.py  test_repository_coverage_boost.py  test_session_repository_enhanced.py  test_user_repository_enhanced.py
tests/test_scripts/: README.md  __init__.py  conftest.py  test_db_integration.py  test_db_migrate.py  test_db_reset.py  test_db_seed.py  test_end_to_end.py  test_format_code.py  test_run_tests.py  test_runner.py  test_script_integration.py  test_script_verification.py
tests/test_services/: test_ssh_client.py
tests/test_ssh/: __init__.py  test_comprehensive_operations.py  test_ssh_client_service.py
tests/test_sync/: __init__.py  test_conflict_resolver.py  test_realtime_synchronization.py  test_sync_service_comprehensive.py
tests/test_websocket/: __init__.py  test_connection_manager.py  test_connection_manager_comprehensive.py  test_terminal.py
(+6 files in other folders)
